--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "httpx==0.28.1",
     "jieba==0.42.1",
     "matplotlib==3.9.0",
+    "numpy>=2.0.2",
     "opencv-python>=4.11.0.86",
     "pandas==2.2.3",
     "parsel==1.9.1",
@@ -21,6 +22,8 @@ dependencies = [
     "pydantic==2.5.2",
     "pyexecjs==1.5.1",
     "python-dotenv==1.0.1",
+    "pyzbar>=0.1.9",
+    "qrcode[pil]>=8.2",
     "redis~=4.6.0",
     "requests==2.32.3",
     "tenacity==8.2.2",
